flex box problem fixed

--- a/index.html
+++ b/index.html
@@ -14,25 +14,37 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <p>Add to Playlist <i class="fas fa-caret-right"></i></p>
+    <div class="mainContainer">
+    <div class="extern">
+      <p>Newlist</p>
       <div class="underline"></div>
-      <p>Play Next</p>
-      <p>Play Later</p>
-      <p>Create station</p>
-      <div class="underline"></div>
-      <p>Song Info</p>
-      <p>Love</p>
-      <p>Dislake</p>
-      <div class="underline"></div>
-      <p>Show Album in Library</p>
-      <p>Show in iTunes Store</p>
-      <div class="underline"></div>
-      <p>Copy</p>
-      <p>Show in Finder</p>
-      <div class="underline"></div>
-      <p>Remove from Playlist</p>
-      <p>Delete from Library</p>
     </div>
+      <div class="container">
+        <p>
+          Add to Playlist
+          <i class="fas fa-caret-right"></i>
+        </p>
+
+        <div class="underline"></div>
+        <p>Play Next</p>
+        <p>Play Later</p>
+        <p>Create station</p>
+        <div class="underline"></div>
+        <p>Song Info</p>
+        <p>Love</p>
+        <p>Dislake</p>
+        <div class="underline"></div>
+        <p>Show Album in Library</p>
+        <p>Show in iTunes Store</p>
+        <div class="underline"></div>
+        <p>Copy</p>
+        <p>Show in Finder</p>
+        <div class="underline"></div>
+        <p>Remove from Playlist</p>
+        <p>Delete from Library</p>
+      </div>
+    
+  </div>
+</div>
   </body>
 </html>
