implementing with js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <p>
           Add to Playlist
-          <i class="fas fa-caret-right"></i>
+          <i class="fas fa-caret-right"></i><span class="tab" onmouseover="openTab"></span>
         </p>
 
         <div class="underline"></div>
@@ -46,5 +46,6 @@
     
   </div>
 </div>
+<script src="main.js"></script>
   </body>
 </html>
