--- a/index.html
+++ b/index.html
@@ -13,39 +13,40 @@
     />
     <title>Document</title>
   </head>
-  <body>
-    <div class="mainContainer">
+  <body class='tag'>
+    <div class="mainContainer tag">
     <div class="extern">
-      <p>Newlist</p>
-      <div class="underline"></div>
+      <p class='tag'>Newlist</p>
+      <div class="underline tag"></div>
     </div>
-      <div class="container">
-        <p>
+      <div class="container tag">
+        <p onmouseover="openTab()" onmouseout="openTab()" >
           Add to Playlist
-          <i class="fas fa-caret-right"></i><span class="tab" onmouseover="openTab"></span>
+          <i class="fas fa-caret-right"></i><span ></span>
         </p>
 
-        <div class="underline"></div>
-        <p>Play Next</p>
-        <p>Play Later</p>
-        <p>Create station</p>
-        <div class="underline"></div>
-        <p>Song Info</p>
-        <p>Love</p>
-        <p>Dislake</p>
-        <div class="underline"></div>
-        <p>Show Album in Library</p>
-        <p>Show in iTunes Store</p>
-        <div class="underline"></div>
-        <p>Copy</p>
-        <p>Show in Finder</p>
-        <div class="underline"></div>
-        <p>Remove from Playlist</p>
-        <p>Delete from Library</p>
+        <div class="underline tab"></div>
+        <p class='tag'>Play Next</p>
+        <p class='tag'>Play Later</p>
+        <p class='tag'>Create station</p>
+        <div class="underline tab"></div>
+        <p class='tag'>Song Info</p>
+        <p class="tag"> Love</p>
+        <p class='tag'>Dislake</p>
+        <div class="underline tab"></div>
+        <p class='tag'>Show Album in Library</p>
+        <p class='tag'>Show in iTunes Store</p>
+        <div class="underline tab"></div>
+        <p class='tag'>Copy</p>
+        <p class='tag'>Show in Finder</p>
+        <div class="underline tab"></div>
+        <p class='tag'>Remove from Playlist</p>
+        <p class='tag'>Delete from Library</p>
       </div>
     
   </div>
 </div>
+
 <script src="main.js"></script>
   </body>
 </html>
