its near what should be

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   </head>
   <body class='tag'>
     <div class="mainContainer tag">
-    <div class="extern">
-      <p class='tag'>Newlist</p>
+    <div class="extern" style="visibility: hidden;">
+      <p>Newlist</p>
       <div class="underline tag"></div>
     </div>
       <div class="container tag">
-        <p onmouseover="openTab()" onmouseout="openTab()" >
+        <!-- <p onmouseover="openTab()" onmouseout="closeTab()" > -->
+            <p onmouseover="openTab()" onmouseout="openTab()" >
           Add to Playlist
           <i class="fas fa-caret-right"></i><span ></span>
         </p>
