--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   </head>
   <body class='tag'>
     <div class="mainContainer tag">
-    <div class="extern" style="visibility: hidden;">
+    <div class="extern" >
       <p>Newlist</p>
       <div class="underline tag"></div>
     </div>
       <div class="container tag">
-        <!-- <p onmouseover="openTab()" onmouseout="closeTab()" > -->
-            <p onmouseover="openTab()" onmouseout="openTab()" >
+        <!-- <p onmouseover="openTab()" onmouseout="closeTab()" > 
+         <p onmouseover="openTab()" onmouseout="openTab()" > -->
+        <p id="openCloseTab">
+
           Add to Playlist
           <i class="fas fa-caret-right"></i><span ></span>
         </p>
