new list button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="mainContainer tag">
     <div class="extern" >
       <p>Newlist</p>
+      <i class="fa fa-plus-circle" aria-hidden="true"></i>
       <div class="underline tag"></div>
     </div>
       <div class="container tag">
