--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="extern" >
       <p>Newlist</p>
       <i class="fa fa-plus-circle" aria-hidden="true"></i>
-      <div class="underline tag"></div>
+      <div class="underline tag child"></div>
     </div>
       <div class="container tag">
         <!-- <p onmouseover="openTab()" onmouseout="closeTab()" > 
